<resources>
    <string name="app_name">AsteroidesUPV</string>
    <string name="acerca_de">Acerca de</string>
    <string name="jugar">Jugar</string>
    <string name="configurar">Configurar</string>
    <string name="salir">Salir</string>
    <string name="asteroides">ASTEROIDES</string>
    <string name="boton">Botón Personalizado</string>
    <string name="calculadora">Calculadora</string>

    <string name="one" translatable="false">1</string>
    <string name="four" translatable="false">4</string>
    <string name="six" translatable="false">6</string>
    <string name="seven" translatable="false">7</string>
    <string name="eight" translatable="false">8</string>
    <string name="nine" translatable="false">9</string>
    <string name="zero" translatable="false">0</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="five" translatable="false">5</string>
    <string name="zero_point_zero" translatable="false">0.0</string>
    <string name="dot" translatable="false">.</string>
    <string name="divide" translatable="false">÷</string>
    <string name="multiply" translatable="false">×</string>
    <string name="add" translatable="false">+</string>
    <string name="equals" translatable="false">=</string>
    <string name="subtract" translatable="false">−</string>

    <string name="advanced_chains" translatable="false">Advanced Chains</string>

</resources>
